# ctrlesc-api

./: docker-compose.yaml  main.py  mqtt.py  pyproject.toml  settings.py
api/: main.py  settings.py
api/alembic/versions/: 2b0fddedc99b_.py  5070a8a57e67_initial_migration.py
api/lib/: db.py  mqtt.py  populate_db.py  redis.py  roomconfigs.py
api/lib/db/: __init__.py
api/lib/mock/: db.py
api/public/config/rooms/: demonic-presence.json
api/routes/: rooms.py
api/scripts/: setup_mock_db.py
lib/: redis.py  roomconfigs.py
models/: base.py  puzzle.py  room.py  util.py
models/rooms/: __init__.py  components.py  model.py  state.py
public/config/rooms/: demonic-presence.json
routes/: mockstate.py  rooms.py
scripts/: setup_mock_db.py
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 2b0fddedc99b_.py
src/api/: main.py  settings.py
src/api/lib/: erorrs.py  mqtt.py  redis.py  roomconfigs.py
src/api/lib/db/: games.py
src/api/lib/mock/: db.py  id.py
src/api/public/config/rooms/: demonic-presence.json  porta-aenigma.json
src/api/routes/: rooms.py
typings/redis/: __init__.pyi  backoff.pyi  cache.pyi  client.pyi  cluster.pyi  connection.pyi  crc.pyi  credentials.pyi  event.pyi  exceptions.pyi  lock.pyi  ocsp.pyi  retry.pyi  sentinel.pyi  typing.pyi  utils.pyi
typings/redis/_parsers/: __init__.pyi  base.pyi  commands.pyi  encoders.pyi  helpers.pyi  hiredis.pyi  resp2.pyi  resp3.pyi  socket.pyi
typings/redis/asyncio/: __init__.pyi  client.pyi  cluster.pyi  connection.pyi  lock.pyi  retry.pyi  sentinel.pyi  utils.pyi
typings/redis/auth/: err.pyi  token.pyi
typings/redis/commands/: __init__.pyi  cluster.pyi  core.pyi  helpers.pyi  redismodules.pyi  sentinel.pyi
typings/redis/commands/bf/: __init__.pyi  commands.pyi  info.pyi
typings/redis/commands/json/: __init__.pyi  _util.pyi  commands.pyi  decoders.pyi  path.pyi
typings/redis/commands/search/: __init__.pyi  _util.pyi  aggregation.pyi  commands.pyi  dialect.pyi  document.pyi  field.pyi  index_definition.pyi  profile_information.pyi  query.pyi  result.pyi  suggestion.pyi
typings/redis/commands/timeseries/: __init__.pyi  commands.pyi  info.pyi  utils.pyi
typings/redis/commands/vectorset/: __init__.pyi  commands.pyi  utils.pyi
