[tool.poetry]
name = "api"
version = "0.1.0"
description = "Backend API for a central Escape Room control system"
authors = ["wwalewski <w.walewski112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-mqtt = "^1.0.9"
fastapi = {extras = ["all"], version = "^0.96.0"}
sse-starlette = "^1.6.1"
asyncio = "^3.4.3"
websockets = "^11.0.3"
faker = "^18.10.1"
python-slugify = "^8.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
