[project]
name = "ctrlesc-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sevenreek", email = "sevenreek@gmail.com" }
]
dependencies = [
    "faker>=37.8.0",
    "python-slugify>=8.0.4",
    "numpy>=2.3.3",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "nanoid>=2.0.0",
    "redis[hiredis]>=6.4.0",
    "gmqtt>=0.7.0",
    "aiofiles>=24.1.0",
    "pydantic-settings>=2.11.0",
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.117.1",
    "sse-starlette>=3.0.2",
    "sqlalchemy>=2.0.43",
    "ctrlesc-models @ file:///home/sevenreek/Development/ctrlesc/ctrlesc-api/../ctrlesc-models",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pyright]
reportExplicitAny = false
